--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/20.4.27/miui_MIMIX3_20.4.27_8f7879221b_10.0.zip
+  ROM_URL: https://npf38u87sc88u1rrdnp8jn514on8t9d8a1e4g8sotnhah73lgv5vvc79.qc.x.bsgslb.cn:10443/xdispatch72f42df66e103e16/bigota.d.miui.com/20.9.4/miui_MI8_20.9.4_21d22b073e_10.0.zip?bsreqid=9f5417d78c7f66d6c67b84ed17b950ac
   ROM_NAME: MIUI
   BUILD_TYPE: ab
   TZ: Asia/Shanghai
