--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://npf38u87sc88u1rrdnp8jn514on8t9d8a1e4g8sotnhah73lgv5vvc79.qc.x.bsgslb.cn:10443/xdispatch72f42df66e103e16/bigota.d.miui.com/20.9.4/miui_MI8_20.9.4_21d22b073e_10.0.zip?bsreqid=9f5417d78c7f66d6c67b84ed17b950ac
-  ROM_NAME: MIUI
+  ROM_URL: https://dl.google.com/dl/android/aosp/crosshatch-rq3a.211001.001-factory-9d99e161.zip
+  ROM_NAME: pixel
   BUILD_TYPE: ab
   TZ: Asia/Shanghai
 
